archive/code/lra-executor-quickstart/participant2-service/src/main/kubernetes/openshift.yml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      expose: "true"
      app: participant2-service
    name: participant2-service
  spec:
    ports:
    - name: http
      port: 8080
    selector:
      app: participant2-service
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    labels:
      app: participant2-service
      version: v1
    name: participant2-service
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: participant2-service
        version: v1
    template:
      metadata:
        labels:
          app: participant2-service
          version: v1
      spec:
        containers:
        - env:
          - name: JAVA_OPTIONS
            value: -Xms128m -Xmx256m
          image: xstefank/participant2-service:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
              - curl
              - localhost:8080/api/health
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 1
          name: participant2-service
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - curl
              - localhost:8080/api/health
              initialDelaySeconds: 10
              periodSeconds: 5
              timeoutSeconds: 1
          securityContext:
            privileged: false
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      expose: "true"
      app: participant2-service
    name: participant2-service
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: participant2-service
